fix drag n drop, playlists dialog

--- a/src/app/playlists/confirm-playlist-delete-dialog/confirm-playlist-delete-dialog.component.html
+++ b/src/app/playlists/confirm-playlist-delete-dialog/confirm-playlist-delete-dialog.component.html
@@ -4,6 +4,6 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-button matDialogClose>Cancel</button>
-  <button mat-button (click)="confirmDelete()" class="delete">Delete</button>
+  <button mat-button matDialogClose class="white">Cancel</button>
+  <button mat-button (click)="confirmDelete()" class="white delete">Delete</button>
 </div>
