--- a/src/app/playlists/playlist-detail/playlist-detail.component.scss
+++ b/src/app/playlists/playlist-detail/playlist-detail.component.scss
@@ -48,6 +48,11 @@
         .desc{
           color: var(--light-text)
         }
+        .with-divider{
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+        }
       }
     }
     .actions{
