--- a/src/app/user/playlists/playlists.component.html
+++ b/src/app/user/playlists/playlists.component.html
@@ -2,8 +2,13 @@
   <div class="playlists">
     <h1>My playlists</h1>
     @if (playlists.length) {
+      <div class="user-ui">
+        <mat-form-field appearance="outline" floatLabel="always" [style.width]="'400px'">
+          <mat-label>Search playlists</mat-label>
+          <input matInput type="text" placeholder="Filter playlists by name" (input)="filterPlaylists(query.value)" #query>
+        </mat-form-field>
+      </div>
       <div class="search-bar">
-        <input type="text" placeholder="Filter playlists by name" (input)="filterPlaylists(query.value)" #query>
       </div>
       <div class="cards">
         @if (filtered.length > 0) {
