user playlists update

--- a/src/app/albums/album-detail/album-detail.component.html
+++ b/src/app/albums/album-detail/album-detail.component.html
@@ -15,6 +15,7 @@
       <div class="backdrop"></div>
       <img class="cover" src="{{album.cover}}">
       <div class="info">
+        <p>Album</p>
         <div class="name">
           <h1>{{album.name}}</h1>
           @if (!isAlbumLiked) {
