--- a/src/app/core/sidenav/user-playlist-list/user-playlist-list.component.scss
+++ b/src/app/core/sidenav/user-playlist-list/user-playlist-list.component.scss
@@ -69,7 +69,7 @@
       color: var(--light-text);
     }
     .number{
-      color: var(--gray);
+      color: #6b6b6b;
       font-size: 13px;
       font-weight: bold;
     }
