user routes and menu color

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -24,16 +24,16 @@
   <mat-menu #menu="matMenu">
     <a routerLink="/user/profile" mat-menu-item>
       <mat-icon>person</mat-icon>
-      <span>Profile</span>
+      <span class="white-color">Profile</span>
     </a>
     <a routerLink="/user/settings"  mat-menu-item>
       <mat-icon>settings</mat-icon>
-      <span>Settings</span>
+      <span class="white-color">Settings</span>
     </a>
     <mat-divider></mat-divider>
     <a mat-menu-item (click)="logout()">
       <mat-icon>logout</mat-icon>
-      <span>Log out</span>
+      <span class="white-color">Log out</span>
     </a>
   </mat-menu>
 </div>
