--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,18 +2,19 @@
   <div class="text">
     <h3>Login to Treble</h3>
   </div>
-  <form (ngSubmit)="onLogin()">
-    <div class="form-group">
-      <label class="label" for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="Your email" [(ngModel)]="email">
-    </div>
-    <div class="form-group">
-      <label class="label" for="password">Password</label>
-      <input type="password" id="password" name="password" placeholder="Your password" [(ngModel)]="password">
-    </div>
+  <form [formGroup]="loginGroup" class="user-ui">
+    <mat-form-field appearance="outline" floatLabel="always">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" placeholder="Your email" formControlName="email"/>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" floatLabel="always">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" placeholder="Your password" formControlName="password"/>
+    </mat-form-field>
     <div class="form-group">
       <div class="left">
-        <input type="checkbox" name="remember" [(ngModel)]="remember"> Remember me
+        <input type="checkbox" name="remember" formControlName="remember"> Remember me
       </div>
       <div class="right">
         <a routerLink="/auth/register">Don't have an account?</a>
@@ -23,7 +24,7 @@
     @if (error !== '') {
       <p class="error">{{error}}</p>
     }
-    <button matRipple type="submit">Login</button>
+    <button mat-raised-button (click)="onLogin()">Login</button>
 
   </form>
   <div class="divider"></div>
