--- a/src/app/user/playlists/playlists.component.scss
+++ b/src/app/user/playlists/playlists.component.scss
@@ -17,3 +17,19 @@
     gap: 20px;
   }
 }
+.no-playlists-created{
+  height: calc(100vh - 200px);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  text-align: center;
+  mat-icon{
+    color: var(--light-gray);
+    width: 100px;
+    height: 100px;
+    font-size: 100px;
+  }
+}
