--- a/src/styles.scss
+++ b/src/styles.scss
@@ -173,6 +173,7 @@ mat-dialog-container{
   --failed: #fa1a1a;
   --primary-text: #fff;
   --light-text: #9b9b9b;
+  --light-gray: #a9a9a9;
   --queue: linear-gradient(#181818, #000);
   --playlist: linear-gradient(#212121, #000);
   --player: #090909;
