sidenav update lis

--- a/src/app/core/sidenav/nav-links/nav-links.component.html
+++ b/src/app/core/sidenav/nav-links/nav-links.component.html
@@ -21,7 +21,7 @@
     <li>
       <a routerLink="/user/liked">
         <img ngSrc="assets/icons-svg/heart.svg" alt="liked heart,icon" width="20" height="20"/>
-        Saved tracks
+        Liked tracks
       </a>
     </li>
   }
