--- a/src/app/albums/album-list-item/album-list-item.component.html
+++ b/src/app/albums/album-list-item/album-list-item.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/albums/{{album.id}}" class="item">
+<a routerLink="/albums/{{album.id}}" routerLinkActive="active" class="item">
   <img src="{{album.cover}}" alt="cover, album"/>
   <p>{{album.name}}</p>
 </a>
