--- a/src/app/core/header/small-header/small-header.component.scss
+++ b/src/app/core/header/small-header/small-header.component.scss
@@ -45,7 +45,12 @@
       }
     }
     .title{
-      opacity: 0;
+      h1{
+        max-width: calc(100vw - 500px);
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
   }
   .right{
