--- a/src/app/trending/trending.component.html
+++ b/src/app/trending/trending.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header trending">
       <h1>Trending now</h1>
-      <img src="assets/icons-svg/fire.svg"/>
+      <mat-icon>whatshot</mat-icon>
     </div>
     <div class="header">
       <div class="info">
