--- a/src/app/core/sidenav/user-playlist-list/user-playlist-list.component.html
+++ b/src/app/core/sidenav/user-playlist-list/user-playlist-list.component.html
@@ -7,11 +7,11 @@
     }
   </div>
   @if(playlist.tracks_count > 0) {
-    @if(this._queueService.from.id === playlist.id && this._queueService.currentTrackInfo()?.isBeingPlayed) {
+    @if(this._queueService.currentTrackInfo()?.from === playlist.id && this._queueService.currentTrackInfo()?.isBeingPlayed) {
       <button  class="showing opacity-1" matRipple (click)="pause()">
         <mat-icon class="white">pause</mat-icon>
       </button>
-    } @else if(this._queueService.from.id === playlist.id && !this._queueService.currentTrackInfo()?.isBeingPlayed) {
+    } @else if(this._queueService.currentTrackInfo()?.from === playlist.id && !this._queueService.currentTrackInfo()?.isBeingPlayed) {
       <button  class="showing opacity-1" matRipple (click)="continue()">
         <mat-icon class="white">play_arrow</mat-icon>
       </button>
