--- a/src/app/queue/queue.component.scss
+++ b/src/app/queue/queue.component.scss
@@ -18,10 +18,31 @@
     height: 100%;
     background: linear-gradient(180deg, rgba(35, 35, 35, 0), rgba(10, 10, 10, 0.7), #0a0a0a);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    gap: 20px;
+    .header{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
+      padding: 0 100px;
+      h4{
+        color: var(--primary-text);
+      }
+      button{
+        background: rgba(255, 255, 255, 0.27);
+        color: var(--primary-text);
+      }
+    }
+    .main-content{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 50px;
+    }
     .info-left{
       width: 500px;
       height: 500px;
@@ -241,4 +262,9 @@
     width: 20px;
   }
   cursor: move;
+}
+
+
+.disabled{
+  opacity: .4;
 }
