--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -22,8 +22,8 @@
     @for (track of tracks; track track.id; let index = $index;) {
       @defer(on viewport){
       <tr cdkDrag (cdkDragDropped)="onDragDropped($event)" (cdkDragStarted)="onDragStarted($event)" class="item"
-        [ngClass]="{'selected' : selectedTracks.has(index)}" (click)="selectTrack($event, index,track)"
-        (contextmenu)="openMenuOnRightClick($event, track)" (dblclick)="playAllFromIndex(tracks, index, from)">
+          [ngClass]="{'selected' : selectedTracks.has(index), 'disabled' : track.explicit && !(_userService.settings$ | async)?.explicit}" (click)="selectTrack($event, index,track)"
+          (contextmenu)="openMenuOnRightClick($event, track)" (dblclick)="playAllFromIndex(tracks, index, from)">
         @if (selectedTracks.size > 0) {
           <p *cdkDragPreview class="preview">{{selectedTracks.size}} tracks selected</p>
         } @else {
@@ -46,9 +46,17 @@
           </button>
         }
       } @else {
-        <button class="play" (click)="playAllFromIndex(tracks, index, from)">
-          <img src="assets/icons-svg/play.svg" />
-        </button>
+        @if(!track.explicit) {
+          <button class="play" (click)="playAllFromIndex(tracks, index, from)">
+            <img src="assets/icons-svg/play.svg" />
+          </button>
+        } @else if ((this._userService.settings$ | async)?.explicit && track.explicit) {
+          <button class="play" (click)="playAllFromIndex(tracks, index, from)">
+            <img src="assets/icons-svg/play.svg" />
+          </button>
+        }
+        @else if (!(this._userService.settings$ | async)?.explicit && track.explicit){
+        }
       }
 
       @if (!from.url.includes('albums/')) {
@@ -90,7 +98,7 @@
           }
 
           @if (track.explicit) {
-            <img src="assets/icons-svg/explicit.svg" width="14" height="14">
+            <mat-icon class="explicit">explicit</mat-icon>
           }
         </div>
         <div class="artists">
