--- a/src/app/shared/track-table/track-table.component.scss
+++ b/src/app/shared/track-table/track-table.component.scss
@@ -25,7 +25,7 @@ table{
       padding: 0;
       position: sticky;
 
-      &:hover:not(.disabled){
+      &:hover{
         .index{
           .mat-icon{
             display: none;
@@ -49,6 +49,18 @@ table{
           .artists{
             a{
               color: var(--light) !important;
+            }
+          }
+        }
+        &:is(.disabled) {
+          .cover-title{
+            .image{
+              opacity: 1;
+            }
+            .artists{
+              a{
+                color: var(--light-text) !important;
+              }
             }
           }
         }
