--- a/src/app/queue/queue.component.html
+++ b/src/app/queue/queue.component.html
@@ -2,7 +2,10 @@
 <div class="queue" #queue >
   <div class="background" >
     <div class="header">
-      <h4>Queue</h4>
+      <div class="title">
+        <mat-icon>queue_music</mat-icon>
+        <h4>Queue</h4>
+      </div>
       <button mat-button (click)="closeQueue()">Close queue</button>
     </div>
     <div class="main-content">
