--- a/src/app/albums/album-detail/album-detail.component.scss
+++ b/src/app/albums/album-detail/album-detail.component.scss
@@ -60,6 +60,41 @@
   }
   .bottom{
     padding: 0 20px;
+    .buttons{
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+      align-items: center;
+      .play{
+        mat-icon{
+          font-size: 30px;
+          width: 30px;
+          height: 30px;
+          color: var(--light);
+        }
+      }
+      .like{
+        width: 50px;
+        height: 50px;
+        border: none;
+        border-radius: 50%;
+        background: none;
+        &:hover{
+          cursor: pointer;
+        }
+        mat-icon{
+          font-size: 40px;
+          width: 40px;
+          height: 40px;
+          color: var(--light-text);
+        }
+      }
+      .liked{
+        mat-icon{
+          color: var(--main-color);
+        }
+      }
+    }
     .play{
       margin-bottom: 10px;
       background: var(--main-color);
