--- a/src/app/core/sidenav/sidenav.component.html
+++ b/src/app/core/sidenav/sidenav.component.html
@@ -30,9 +30,10 @@
                     <app-loading></app-loading>
                   }
                 } @empty {
-                  <div class="empty">
-                    <mat-icon>queue_music</mat-icon>
-                    <p>You don't have any playlists.</p>
+                  <div class="no-created">
+                    <p>Create your first playlist</p>
+                    <p>It's easy, we'll help you</p>
+                    <button mat-raised-button>Create playlist</button>
 
                   </div>
                 }
@@ -47,9 +48,10 @@
                 @for (artist of following; track artist.id) {
                   <app-user-following-list-item [artist]="artist"></app-user-following-list-item>
                 } @empty {
-                  <div class="empty">
-                    <mat-icon>sentiment_dissatisfied</mat-icon>
-                    <p>You don't follow any artists.</p>
+                  <div class="no-created">
+                    <p>Find your favorite artists</p>
+                    <p>Press "Follow"</p>
+                    <button mat-raised-button>Explore</button>
                   </div>
                 }
               </div>
@@ -72,7 +74,7 @@
             </mat-tab>
         </mat-tab-group>
       </div>
-      <mat-divider></mat-divider>
+
     }
 
   </mat-sidenav>
